# raytracer

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
docs/: Doxyfile.in
src/: camera.hpp  color.hpp  material.hpp  math.hpp  png.hpp  random.hpp  raytracer.cpp  rng.hpp  shape.hpp
